src/controller/snapshots/roco_rs__controller__format__tests__builder_empty_response.snap
---
source: src/controller/format.rs
expression: response
---
Response {
    status: 200,
    version: HTTP/1.1,
    headers: {},
    body: Body(
        UnsyncBoxBody,
    ),
}
