src/controller/snapshots/roco_rs__controller__format__tests__builder_redirect_with_custom_header_response.snap
---
source: src/controller/format.rs
expression: response
---
Response {
    status: 303,
    version: HTTP/1.1,
    headers: {
        "hx-redirect": "https://rsonroco.com",
    },
    body: Body(
        UnsyncBoxBody,
    ),
}
